--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="colorDivider">#DBDBDB</color>
     <color name="colorPointsBlue">#165CA8</color>
+    <color name="startColor">#B3D7FF</color>
+    <color name="endColor">#4A90E2</color>
 </resources>
